--- a/css/styles.css
+++ b/css/styles.css
@@ -10,14 +10,13 @@ body {
 	color: #000;
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
+	min-height: 100vh;
 	justify-content: space-between;
 }
 header {
 	width: 100%;
-	height: 194px;
-	min-height: 194px;
 	background-color: #1659bf;
+	padding-bottom: 30px;
 }
 header .logo {
 	width: 960px;
@@ -44,11 +43,10 @@ header .logo .portal-description a {
 main {
 	width: 960px;
 	margin: 0 auto;
-	padding: 40px 0;
+	/* padding: 40px 0; */
 }
 footer {
-	width: 100%;
-	height: 96px;
+	padding: 30px 0;
 	background-color: #0042b1;
 }
 footer .links {
