--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,6 @@
 
 /* HEADER */
 header {
-  /* width: 100%; */
   background-color: #0042b1;
   padding: 50px 0;
 }
@@ -71,6 +70,12 @@ main {
 	.nav-multimodelos {
 		width: 100%!important;
 	}
+  .acesso-info {
+    width: 40px;
+  }
+  .gov-federal {
+    width: 110px;
+  }
 }
 .model-container {
 	display: flex;
