--- a/css/styles.css
+++ b/css/styles.css
@@ -1,75 +1,75 @@
 * {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  font-family: "Open Sans", sans-serif;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	font-family: "Open Sans", sans-serif;
 }
 
 /* HEADER */
 header {
-  /* width: 100%; */
-  background-color: #0042b1;
-  padding: 50px 0;
+	/* width: 100%; */
+	background-color: #0042b1;
+	padding: 50px 0;
 }
 header .logo a {
-  text-decoration: none;
+	text-decoration: none;
 }
 header .logo .title {
-  color: #fff;
-  font-size: 38px;
-  font-weight: 800;
-  line-height: 1em;
+	color: #fff;
+	font-size: 38px;
+	font-weight: 800;
+	line-height: 1em;
 }
 header .logo .portal-description a {
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #fff;
-  font-size: 14px;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #fff;
+	font-size: 14px;
 }
 
 /* FOOTER */
 footer {
-  padding: 30px 0;
-  background-color: #0042b1;
+	padding: 30px 0;
+	background-color: #0042b1;
 }
 .links {
-  display: flex;
-  justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
 }
 .acesso-info {
-  width: 60px;
+	width: 60px;
 }
 .gov-federal {
-  width: 150px;
+	width: 150px;
 }
 .link a {
-  text-decoration: none;
-  color: white;
+	text-decoration: none;
+	color: white;
 }
 
 /* BODY */
 main {
-  min-height: 70vh;
-  padding-top: 30px;
+	min-height: 70vh;
+	padding-top: 30px;
 }
-@media(width <= 992px) {
+@media (max-width: 992px) {
 	.model-container {
 		flex-direction: column;
 		align-items: center;
 	}
 	.model-box {
-		width: 70%!important;
+		width: 70% !important;
 	}
 	.tab-pane {
 		flex-direction: column;
 	}
 }
-@media(width <= 575px) {
+@media (max-width: 575px) {
 	.model-box {
-		width: 100%!important;
+		width: 100% !important;
 	}
 	.nav-multimodelos {
-		width: 100%!important;
+		width: 100% !important;
 	}
 }
 .model-container {
@@ -80,63 +80,64 @@ main {
 	width: 50%;
 }
 h3 {
-  font-size: 30px !important;
-  font-weight: bolder !important;
-  text-align: center;
-  margin-bottom: 30px !important;
+	font-size: 30px !important;
+	font-weight: bolder !important;
+	text-align: center;
+	margin-bottom: 30px !important;
 }
 .btns-container {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
 .btn {
-  margin-bottom: 10px;
-  width: 100%;
+	margin-bottom: 10px;
+	width: 100%;
 }
 .btn-group {
-  width: 100%;
+	width: 100%;
 }
 .btn-primary {
-  background-color: #0042b1 !important;
+	background-color: #0042b1 !important;
 }
-.prec-text, .img-box p {
+.prec-text,
+.img-box p {
 	text-align: center;
 	font-weight: bold;
 	margin: 0;
 }
 .nav-container {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 .nav {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 10px;
 }
 .nav-link {
-  padding: 5px 10px !important;
-  margin-bottom: 5px;
+	padding: 5px 10px !important;
+	margin-bottom: 5px;
 }
 .multimodelos-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 .nav-multimodelos {
-  width: 60%;
+	width: 60%;
 }
 .tab-pane {
-  display: flex;
-  gap: 10px;
+	display: flex;
+	gap: 10px;
 }
 .tab-pane img {
-  margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 .img-box img {
-  width: 100%;
+	width: 100%;
 }
 .img-box h4 {
-  text-align: center;
+	text-align: center;
 }
